--- a/works.html
+++ b/works.html
@@ -46,6 +46,9 @@
         text-decoration: none;
         color: #fff;
       }
+      html, body {
+        height: 100%;
+      }
       body {
         text-align: center;
         overflow: hidden;
@@ -56,11 +59,13 @@
         position: relative;
         background: #fff;
       }
+      main {
+        height: 100%;
+      }
       #container {
         max-width: 1500px;
         margin: 0 auto;
-        height: 100vh;
-        height: calc(var(--vh, 1vh) * 100);
+        height: 100%;
         overflow-y: scroll;
         scroll-snap-type: y mandatory;
       }
@@ -103,7 +108,7 @@
         fill: #FFF;
       }
       ol {
-        background: rgba(0, 0, 0, 0.8);
+        background: rgba(0, 0, 0, 0.5);
         border-radius: 4px;
       }
       ol li {
@@ -237,55 +242,57 @@
     <title>Toshiya Marukubo | Homepage | Works & Learning</title>
   </head>
   <body>
-    <h1>WORKS & LEARNING</h1>
-    <div>
-      <a href="https://toshiya-marukubo.github.io/">
-        <svg viewBox="0 0 512 512" width="48" title="arrow-circle-left" class="return">
-          <path d="M256 504C119 504 8 393 8 256S119 8 256 8s248 111 248 248-111 248-248 248zm28.9-143.6L209.4 288H392c13.3 0 24-10.7 24-24v-16c0-13.3-10.7-24-24-24H209.4l75.5-72.4c9.7-9.3 9.9-24.8.4-34.3l-11-10.9c-9.4-9.4-24.6-9.4-33.9 0L107.7 239c-9.4 9.4-9.4 24.6 0 33.9l132.7 132.7c9.4 9.4 24.6 9.4 33.9 0l11-10.9c9.5-9.5 9.3-25-.4-34.3z" />
-        </svg>
-      </a>
+    <div id="container">
+      <h1>WORKS & LEARNING</h1>
+      <div>
+        <a href="https://toshiya-marukubo.github.io/">
+          <svg viewBox="0 0 512 512" width="48" title="arrow-circle-left" class="return">
+            <path d="M256 504C119 504 8 393 8 256S119 8 256 8s248 111 248 248-111 248-248 248zm28.9-143.6L209.4 288H392c13.3 0 24-10.7 24-24v-16c0-13.3-10.7-24-24-24H209.4l75.5-72.4c9.7-9.3 9.9-24.8.4-34.3l-11-10.9c-9.4-9.4-24.6-9.4-33.9 0L107.7 239c-9.4 9.4-9.4 24.6 0 33.9l132.7 132.7c9.4 9.4 24.6 9.4 33.9 0l11-10.9c9.5-9.5 9.3-25-.4-34.3z" />
+          </svg>
+        </a>
+      </div>
+      <p class="dataFrom">Data from CodePen.</p>
+      <p id="now">0.00 %</p>
+      <ol class="lovesSortBtn">
+        <li id="lovesSortToLarge">
+          <a href="#">
+            <svg viewBox="0 0 320 512" width="24" title="angle-up" class="arrow">
+              <path d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z" />
+            </svg>
+          </a>
+        </li>
+        <li>Loves</li>
+        <li id="lovesSortToSmall">
+          <a href="#">
+            <svg viewBox="0 0 320 512" width="24" title="angle-down" class="arrow">
+              <path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+            </svg>
+          </a>
+        </li>
+      </ol>
+      <ol class="viewsSortBtn">
+        <li id="viewsSortToLarge">
+          <a href="#">
+            <svg viewBox="0 0 320 512" width="24" title="angle-up" class="arrow">
+              <path d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z" />
+            </svg>
+          </a>
+        </li>
+        <li>Views</li>
+        <li id="viewsSortToSmall">
+          <a href="#">
+            <svg viewBox="0 0 320 512" width="24" title="angle-down" class="arrow">
+              <path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+            </svg>
+          </a>
+        </li>
+      </ol>
+      <main></main>
     </div>
-    <p class="dataFrom">Data from CodePen.</p>
-    <p id="now">0.00 %</p>
-    <ol class="lovesSortBtn">
-      <li id="lovesSortToLarge">
-        <a href="#">
-          <svg viewBox="0 0 320 512" width="24" title="angle-up" class="arrow">
-            <path d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z" />
-          </svg>
-        </a>
-      </li>
-      <li>Loves</li>
-      <li id="lovesSortToSmall">
-        <a href="#">
-          <svg viewBox="0 0 320 512" width="24" title="angle-down" class="arrow">
-            <path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
-          </svg>
-        </a>
-      </li>
-    </ol>
-    <ol class="viewsSortBtn">
-      <li id="viewsSortToLarge">
-        <a href="#">
-          <svg viewBox="0 0 320 512" width="24" title="angle-up" class="arrow">
-            <path d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z" />
-          </svg>
-        </a>
-      </li>
-      <li>Views</li>
-      <li id="viewsSortToSmall">
-        <a href="#">
-          <svg viewBox="0 0 320 512" width="24" title="angle-down" class="arrow">
-            <path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
-          </svg>
-        </a>
-      </li>
-    </ol>
-    <div id="container"></div>
     <script>
       (function() {
         'use strict';
-        var container, index, data, count, scrolling, now, vh, W, H, lovesSortToSmall, lovesSortToLarge, viewsSortToSmall, viewsSortToLarge, percent;
+        var container, index, data, count, scrolling, now, vh, W, H, lovesSortToSmall, lovesSortToLarge, viewsSortToSmall, viewsSortToLarge, percent, main;
 
         var getJson = function() {
           return new Promise(function(resolve, reject) {
@@ -367,7 +374,7 @@
             section.appendChild(h2);
             section.appendChild(ul);
             a.appendChild(section);
-            container.appendChild(a);
+            main.appendChild(a);
             // resolve
             resolve(data.image);
           });
@@ -404,13 +411,14 @@
         var init = function() {
           W = window.innerWidth;
           H = window.innerHeight;
+          main = document.getElementsByTagName('main')[0];
           container = document.getElementById('container');
           lovesSortToSmall = document.getElementById('lovesSortToSmall');
           lovesSortToLarge = document.getElementById('lovesSortToLarge');
           viewsSortToSmall = document.getElementById('viewsSortToSmall');
           viewsSortToLarge = document.getElementById('viewsSortToLarge');
-          vh = H * 0.01;
-          document.documentElement.style.setProperty('--vh', vh + 'px');
+          //vh = H * 0.01;
+          //document.documentElement.style.setProperty('--vh', vh + 'px');
           now = document.getElementById('now');
           index = 0;
           count = 0;
@@ -424,7 +432,7 @@
 
         var deleteItems = function() {
           return new Promise(function(resolve, reject) {
-            container.textContent = null;
+            main.textContent = null;
             resolve();
           });
         };
@@ -446,8 +454,8 @@
         };
 
         var verResize = function() {
-          vh = H * 0.01;
-          document.documentElement.style.setProperty('--vh', vh + 'px');
+          //vh = H * 0.01;
+          //document.documentElement.style.setProperty('--vh', vh + 'px');
         };
 
         window.addEventListener('load', function() {
