--- a/works.html
+++ b/works.html
@@ -47,9 +47,11 @@
         text-decoration: none;
         color: #fff;
       }
+      /*
       html, body {
         height: 100%;
       }
+      */
       body {
         text-align: center;
         overflow: hidden;
@@ -61,12 +63,12 @@
         background: #fff;
       }
       main {
-        height: 100%;
+        height: 100vh;
+        height: calc(var(--vh, 1vh) * 100);
       }
       #container {
         max-width: 1500px;
         margin: 0 auto;
-        height: 100%;
         overflow-y: scroll;
         -ms-scroll-snap-type: y mandatory;
             scroll-snap-type: y mandatory;
@@ -169,7 +171,11 @@
         padding-left: 0.8rem;
       }
       section {
+        /*
         height: 100%;
+        */
+        height: 100vh;
+        height: calc(var(--vh, 1vh) * 100);
         overflow: hidden;
         position: relative;
         scroll-snap-align: start;
@@ -460,6 +466,8 @@
         };
 
         var init = function () {
+          vh = window.innerHeight * 0.01;
+          document.documentElement.style.setProperty('--vh', vh + 'px');
           W = window.innerWidth;
           H = window.innerHeight;
           main = document.getElementsByTagName('main')[0];
@@ -560,6 +568,8 @@
           window.addEventListener('resize', function () {
             W = window.innerWidth;
             H = window.innerHeight;
+            vh = window.innerHeight * 0.01;
+            document.documentElement.style.setProperty('--vh', vh + 'px');
           }, false);
         }, false);
       })();
