--- a/works.html
+++ b/works.html
@@ -67,6 +67,8 @@
         height: calc(var(--vh, 1vh) * 100);
       }
       #container {
+        height: 100vh;
+        height: calc(var(--vh, 1vh) * 100);
         max-width: 1500px;
         margin: 0 auto;
         overflow-y: scroll;
