--- a/works.html
+++ b/works.html
@@ -63,12 +63,18 @@
         background: #fff;
       }
       main {
+        /*
         height: 100vh;
         height: calc(var(--vh, 1vh) * 100);
+        */
+        height: 100%;
       }
       #container {
+        /*
         height: 100vh;
         height: calc(var(--vh, 1vh) * 100);
+        */
+        height: 100%;
         max-width: 1500px;
         margin: 0 auto;
         overflow-y: scroll;
@@ -173,11 +179,11 @@
         padding-left: 0.8rem;
       }
       section {
-        /*
         height: 100%;
-        */
+        /*
         height: 100vh;
         height: calc(var(--vh, 1vh) * 100);
+        */
         overflow: hidden;
         position: relative;
         scroll-snap-align: start;
