--- a/works.html
+++ b/works.html
@@ -78,6 +78,7 @@
         color: #EEE;
         position: fixed;
         top: 50vh;
+        top: calc(var(--vh, 1vh) * 50);
         left: 50%;
         -webkit-transform: translate(-50%, -50%);
             -ms-transform: translate(-50%, -50%);
@@ -134,6 +135,7 @@
         z-index: 999;
         position: fixed;
         top: 50vh;
+        top: calc(var(--vh, 1vh) * 50);
         -webkit-transform: translateY(-50%);
             -ms-transform: translateY(-50%);
                 transform: translateY(-50%);
